# tree_condenser_stamp

./: MANIFEST.in  README.md  pyproject.toml  tree_coarsening_api.md
benchmarks/: benchmark_edge_bpe_numba.py  edge_bpe_timing_sweep.ipynb
docs/: edge_bpe_numba_experiment.md  star_coarsener.md
experiments/: CARBANAK_RUN_FIRST_prep.ipynb  CARBANAK_star_edge_bpe_experiment.ipynb
notebooks/: edge_bpe_coarsener_example.ipynb  named_vertex_coarsener_example.ipynb  star_coarsener_example.ipynb
tests/: conftest.py  test_clean_schema.py  test_common_fit_schema.py  test_edge_bpe.py  test_edge_bpe_greedy_star.py  test_edge_bpe_internal.py  test_edge_bpe_numba.py  test_edge_bpe_weighted.py  test_edge_bpe_with_auto_star_coarsening.py  test_edge_bpe_with_star_merges.py  test_imports_and_compose.py  test_named_vertices.py  test_pipeline_star_bpe.py  test_simulators.py  test_vocabulary_and_boundary.py
tests/roundtrip_suite/: README.md  __init__.py  coarsening_roundtrip_visual_checks.ipynb  common.py  run_roundtrip_checks.py  test_schema_and_backend_invariants.py  test_simulation_reproducibility.py  test_single_stage_roundtrips.py  test_two_stage_roundtrips.py
tree_coarsening/: __init__.py  canonical.py  coarsener.py  compose.py  decoder.py  encoder.py  exceptions.py  nx_io.py  provenance.py  schema.py  stage_decoder.py  structural.py  validation.py  vocabulary.py
tree_coarsening.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tree_coarsening/coarseners/: __init__.py  edge_bpe.py  edge_bpe_greedy_star.py  edge_bpe_numba.py  edge_bpe_with_star_merges.py  (+3 more)
(+18 files in other folders)
